# ModelSelector

./: .gitignore  CV Analysis.ipynb  Classification.ipynb  Engineering analysis.ipynb  Leave one out engineering.ipynb  Optimal Datasets.ipynb  Prelim Analysis-Engineering.ipynb  README.md  Scripts.ipynb  Untitled.ipynb  features.csv  pyproject.toml  script.py
features/: benchmark_train.csv  engineering.csv  engineering_train.csv
modelselector/: CalculateFeatures.py  TrainRegressionModels.py  generateData.py  generateengineeringdata.py
surrogate_performance/: R^2.csv  benchmarkCV-score-mean.csv  benchmark_optimal_MSE.csv  benchmark_optimal_R^2.csv  benchmark_optimal_time.csv  benchmark_test_MSE.csv  benchmark_test_R^2.csv  engineeringCV-score-max.csv  engineeringCV-score-mean.csv  engineeringMSE.csv  engineering_test_MSE.csv  engineering_test_R^2.csv  engineering_test_time.csv  time.csv
surrogate_performance_old/: MSE.csv  R^2.xlsx  benchmarkCV-score-max.csv  engineeringR^2.csv  engineeringtime.csv
