[tool.poetry]
name = "modelselector"
version = "0.1.0"
description = "Automatically select good surrogate modelling technique for any given dataset"
authors = ["Bhupinder Saini"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.16"
pandas = "^0.24.2"
scikit-learn = "^0.21.2"
pydoe = "^0.3.8"
optproblems = "^1.2"
rpy2 = "^3.0"
tzlocal = "^1.5"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0",allows-prereleases = true}
flake8 = "^3.7"
pylint = "^2.3"
sphinx = "^2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
